added phase envelopes to code and website